--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,7 +1,7 @@
 # Rename this project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
-name: 'Grupo_J'
+name: 'Grupo_F'
 version: '1.0.0'
 config-version: 2
 
