--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,13 +1,13 @@
 # Rename this project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
-name: 'Grupo_F'
+name: 'my_snowflake_dbt_project'
 version: '1.0.0'
 config-version: 2
 
 # This setting configures which "profile" dbt uses for this project. 
 # In dbt Cloud IDE, this field is unused.
-profile: 'Analytics'
+profile: 'snowflake_demo_project'
 
 # These configurations specify where dbt should look for different types of files.
 # The `source-paths` config, for example, states that models in this project can be
