--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -48,7 +48,7 @@ models:
     # When you rename the project up top, remember to rename it here too. 
       staging:
           # Applies to all files under models/staging 
-          +materialized: view
+          +materialized: table
           # This defaults every model in the staging directory to be materialized as a view in Snowflake. To learn more about materializations: https://docs.getdbt.com/docs/building-a-dbt-project/building-models/materializations
           schema: PC_FIVETRAN_DB
           # This configuration builds every model in the staging directory into a schema named staging_<target_schema>
