--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -12,6 +12,7 @@ profile: 'Analytics'
 # These configurations specify where dbt should look for different types of files.
 # The `source-paths` config, for example, states that models in this project can be
 # found in the "models/" directory. You don't need to change these for this project.
+
 source-paths: ["models"]
 analysis-paths: ["analysis"]
 test-paths: ["tests"]
@@ -30,11 +31,6 @@ clean-targets:         # directories to be removed by `dbt clean`
 on-run-end:
   - "{{ grant_all_on_schemas(schemas, 'public') }}"
 
-# Configuring seeds 
-# Full documentation: https://docs.getdbt.com/docs/building-a-dbt-project/seeds
-seeds:
-# This declares that column names in the seed file will not be quoted when the table is created.
-  +quote_columns: false
 
 # Configuring models
 # Full documentation: https://docs.getdbt.com/docs/configuring-models
@@ -48,6 +44,12 @@ models:
     +materialized: table
     example:
       +materialized: view 
+
+
+quoting:
+  database: false
+  schema: false
+  identifier: false
 
 on-run-start: sql-statement | [sql-statement]
 on-run-end: sql-statement | [sql-statement]
